--- a/Zoom.html
+++ b/Zoom.html
@@ -6,14 +6,14 @@
         <link rel="stylesheet" href="./assets/Zoom.css">
     </head>
     <body>
-        <input type="number" max=10 min=1 value = 1 id="initalScale">
+        <input type="number" max=5 min=1 value = 1 id="initalScale">
         <button class="initalScale_button" onclick="scaleset()">set</button>
 
         <button id="zoom-in-button">+</button>
         <button id="zoom-out-button">-</button>
         
         <section class="topView" id = "section">
-            <div id="content">
+            <div id="content" onload="onBodyLoad()" draggable="true" ondragstart="handleDragStart(event)" ondragend="handleDragEnd(event)" ondrag="handleDrag(event)">
                 <img class="middleImg" src="./assets/img/Screenshot_8.png">
             
                 <div class="leftSide">
